objects/ssot__AssetTelematicsEvent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AmbientTemperatureNumber__c</fullName>
        <label>Ambient Temperature</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AmbientTemperatureUOMId__c</fullName>
        <label>Ambient Temperature Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetCategory__c</fullName>
        <label>Asset Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetHealthStatus__c</fullName>
        <label>Asset Health Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetStatus__c</fullName>
        <label>Asset Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetTemperatureNumber__c</fullName>
        <label>Asset Temperature</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AssetTemperatureUOMId__c</fullName>
        <label>Asset Temperature Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetUniqueIdentifier__c</fullName>
        <label>Asset Unique Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EventCategory__c</fullName>
        <label>Event Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EventSubType__c</fullName>
        <label>Event Sub Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EventType__c</fullName>
        <label>Event Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Asset Telematics Event Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutputPowerNumber__c</fullName>
        <label>Output Power</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OutputPowerUOMId__c</fullName>
        <label>Output Power Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PressureLevelNumber__c</fullName>
        <label>Pressure Level</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PressureLevelUOMId__c</fullName>
        <label>Pressure Level Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Priority__c</fullName>
        <label>Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedEventId__c</fullName>
        <label>Related Event</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SentDateTime__c</fullName>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TelematicsProviderId__c</fullName>
        <label>Telematics Provider</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotalUsageNumber__c</fullName>
        <label>Total Usage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalUsageUoM__c</fullName>
        <label>Total Usage Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TriggeredDateTime__c</fullName>
        <label>Triggered Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VibrationNumber__c</fullName>
        <label>Vibration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VibrationUOMId__c</fullName>
        <label>Vibration Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009172251_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetTelematicsEvent_AssetId_map_Ass_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>AssetTelematicsEvent_AssetId_map_Ass_rel</relationshipLabel>
        <relationshipName>rel_1702009172251_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009172551_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetTelematicsEvent_RelatedEventId__rel</label>
        <referenceTo>ssot__AssetTelematicsEvent__dlm</referenceTo>
        <relationshipLabel>AssetTelematicsEvent_RelatedEventId__rel</relationshipLabel>
        <relationshipName>rel_1702009172551_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009172915_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetTelematicsEvent_TelematicsProvi_rel</label>
        <referenceTo>ssot__TelematicsProvider__dlm</referenceTo>
        <relationshipLabel>AssetTelematicsEvent_TelematicsProvi_rel</relationshipLabel>
        <relationshipName>rel_1702009172915_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>